@@ -1,7 +1,7 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 1.0-1
-Date: 2018-03-29
+Version: 1.0-2
+Date: 2018-09-17
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
@@ -9,8 +9,8 @@ Depends: variables (>= 0.0-30), R (>= 3.2.0)
 Imports: stats, polynom, Matrix, orthopolynom, methods
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2018-03-29 12:59:22 UTC; hothorn
+Packaged: 2018-09-17 14:11:29 UTC; hothorn
 Author: Torsten Hothorn [aut, cre] (<https://orcid.org/0000-0001-8301-0471>)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2018-03-29 14:09:07 UTC
+Date/Publication: 2018-09-17 15:40:05 UTC
